--- a/RigaDevDay/RigaDevDay/Base.lproj/Main.storyboard
+++ b/RigaDevDay/RigaDevDay/Base.lproj/Main.storyboard
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9532" systemVersion="14F1605" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="cp2-fC-y6q">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9531" systemVersion="15D21" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="cp2-fC-y6q">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9530"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
@@ -290,9 +290,9 @@
                                                     <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="NPl-x3-GRM">
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="speaker_0.png" translatesAutoresizingMaskIntoConstraints="NO" id="NPl-x3-GRM">
                                                     <rect key="frame" x="19" y="7" width="55" height="55"/>
-                                                    <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="55" id="XL7-Oz-DQT"/>
                                                         <constraint firstAttribute="width" constant="55" id="o3s-He-jsf"/>
@@ -321,8 +321,9 @@
                                             </constraints>
                                         </tableViewCellContentView>
                                         <connections>
-                                            <outlet property="labelName" destination="0zC-Xf-gkX" id="VEI-2A-HtP"/>
-                                            <outlet property="labelPresentation" destination="4AJ-8f-hWq" id="wjL-cy-W8l"/>
+                                            <outlet property="iboInfoLabel" destination="4AJ-8f-hWq" id="usb-nc-Lu8"/>
+                                            <outlet property="iboNameLabel" destination="0zC-Xf-gkX" id="gL4-uc-0Ix"/>
+                                            <outlet property="iboSpeakerImageView" destination="NPl-x3-GRM" id="9Gl-8J-3Zg"/>
                                         </connections>
                                     </tableViewCell>
                                 </prototypes>
@@ -952,8 +953,8 @@
                                                             </constraints>
                                                             <variation key="default">
                                                                 <mask key="constraints">
-                                                                    <exclude reference="iHB-3Q-SCg"/>
                                                                     <exclude reference="6RR-wS-0Aq"/>
+                                                                    <exclude reference="iHB-3Q-SCg"/>
                                                                 </mask>
                                                             </variation>
                                                         </imageView>
@@ -1432,11 +1433,12 @@
         <image name="icon_menu_speakers.png" width="46" height="62"/>
         <image name="icon_menu_venue.png" width="41" height="57"/>
         <image name="icon_twitter.png" width="73" height="73"/>
+        <image name="speaker_0.png" width="126" height="138"/>
         <image name="speaker_1.png" width="126" height="138"/>
         <image name="twitter-menu.png" width="54" height="44"/>
     </resources>
     <inferredMetricsTieBreakers>
         <segue reference="WJ5-Q1-sZF"/>
-        <segue reference="DLS-5Y-Kcz"/>
+        <segue reference="bnl-aL-XxM"/>
     </inferredMetricsTieBreakers>
 </document>
